[project]
name = "uv-top-level-issue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
	"importlib_metadata",
]

# WORKING:
# [build-system]
# requires = ["setuptools>=80"]
# build-backend = "setuptools.build_meta"

# NOT WORKING:
[build-system]
 requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "the_package_name"
